# code-complexity-computation

./: .gitignore  README.md  main.py  pyproject.toml
data-analysis/: cl_me_correlation.py  compute_traditional_metrics.py  eeg.csv  eeg_full_list.csv  lmm.py  results.md  snippet_metrics.csv  survey_cl_full_list.csv
recent/: analyze_channel_quality.py  channel_quality.csv  cl_me_correlation.py  compute_channel_quality.m  eeg.csv  eeg_pipeline.asv  eeg_pipeline.m  lmm.py  mad.m  nanmedian.m  snippet_metrics.csv  survey_cl.csv  sweep_results.txt  timestamps.csv
results/: cc_loc_andincorrecthalstead.csv  complexities_and_CLs.csv  correlations.txt  final_results.csv  halstead_and_depdegree_computation_conversations.txt  organizedformultilevel.csv  revised_complexities.csv  revised_complexities_and_eeg_cl.csv  revised_complexities_and_manual_cl.csv
samples/: average_of_array.py  decimal_to_binary.py  exponentiation.py  factorial.py  intersection_of_circles.py  intersection_of_rectangles.py  largest_number_in_array.py  largest_of_three_numbers.py  median_of_array.py  prime_check.py  reverse_array_output.py  sum1.py  sum2.py  sum_of_three_digits.py  swap_variables.py  wrapped_average_of_array.py  wrapped_decimal_to_binary.py  wrapped_exponentiation.py  wrapped_factorial.py  wrapped_intersection_of_circles.py  wrapped_intersection_of_rectangles.py  wrapped_largest_number_in_array.py  wrapped_largest_of_three_numbers.py  wrapped_median_of_array.py  wrapped_prime_check.py  wrapped_reverse_array_output.py  wrapped_sum_of_three_digits.py  wrapped_swap_variables.py
(+17 files in other folders)
