[project]
name = "complexity-computation"
version = "0.1.0"
description = ""
authors = [
    {name = "khaes-kth",email = "khaes@kth.se"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wily (>=1.25.0,<2.0.0)",
    "pymetrics (>=1.0.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
