[project]
name = "complexity-computation"
version = "0.1.0"
description = ""
authors = [
    {name = "XXXX",email = "XXXX"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "wily (>=1.25.0,<2.0.0)",
    "pymetrics (>=1.0.10,<2.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scipy (==1.15)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
